# agent-content-watermark-mcp

./: .gitignore  README.md  SECURITY.md  acp.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
agent_content_watermark_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_server.py  test_watermark.py
