[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-content-watermark-mcp"
version = "1.1.3"
description = "Agent Content Watermark MCP — dedicated EU AI Act Article 50(2) GenAI watermarking. Visible + invisible + perceptual layers per the Code of Practice (2 Nov 2026 cliff). C2PA manifest envelope. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "watermark", "c2pa", "eu-ai-act", "article-50", "genai", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://meok.ai/article-50-kit"
Repository = "https://github.com/CSOAI-ORG/agent-content-watermark-mcp"

[project.scripts]
agent-content-watermark-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
